feat(types package): refactored to create type-safe api client, consumption park refactored
